Fxml file fixed Test classes allocated It seems that managed to run the application